# ExtremalFlow

./: LICENSE  README.md
apps/: CMakeLists.txt  image_filtering.cpp
src/: image_processing_utils.cpp  image_processing_utils.h
tests/: CMakeLists.txt
